# rslmtoasa

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: binaries.yml  tests.yml
cmake/: SetFortranFlags.cmake
cpack/: LICENSE.rtf  README.txt  WELCOME.txt  wixpath.xml
docs/: BACKEND_CONTROLS.md  Makefile  SPARSE_MATRIX_BSR_GUIDE.md  ccor_2c.md
docs/source/: conf.py
docs/source/keywords/: basis_parameters.rst  constraints.rst  control_parameters.rst  element_parameters.rst  energy_mesh.rst  index.rst  lattice_geometry.rst  output_options.rst  scf_settings.rst  spin_dynamics.rst
docs/source/reference/: algorithms.rst  conductivity_module.rst  index.rst  module_overview.rst
docs/source/theory/: constraining_fields.rst  green_functions.rst  index.rst  kspace_modes.rst  lda_u_workflow.rst  lmto_asa_overview.rst  recursion_method.rst
docs/source/user_guide/: examples.rst  index.rst  input_files.rst  output_files.rst
docs/source/user_guide/examples/: bulk_bccfe.rst  bulk_si.rst  conductivity_bccfe.rst  conductivity_fcccu.rst  conductivity_fccpt.rst  exchange_bccfe.rst  surface_fcccu001.rst
example/: sparse_matrix_demo.f90
example/band_structure/bccFe/: Fe_out.nml  input.nml  lattice.nml
example/bulk/B2Fe/: Fe-1.nml  Fe-1_out.nml  Fe-2_out.nml  clust  fort.1122  fort.125  fort.251  fort.252  fort.451  fort.452  fort.800  fort.805  input.nml  mad.mat  map  report.out  sbar  str.out  ves.out  view.sbar
example/bulk/Graphene/: C1_out.nml  C1_scf.nml  C2_out.nml  input.nml  input_new.nml  lattice.nml
example/bulk/Si/: E1.nml  E2.nml  Si1.nml  Si1_out.nml  Si2.nml  Si2_out.nml  input.nml  lattice.nml  lattice_new.nml
example/bulk/bccFe/: Fe_out.nml  input.nml
example/bulk/bccFeCo/: Co.nml  Co_out.nml  Fe_out.nml  input.nml  lattice.nml
example/bulk/fccNiO/: Ni_out.nml  O.nml  O_out.nml  fort.125  fort.251  fort.252  fort.451  fort.452  fort.800  fort.805  input.nml  lattice.nml  mad.mat  report.out  sbar  ves.out  view.sbar
example/conductivity/bccFe/: Fe_out.nml  input.nml
example/conductivity/fccCu/: Cu1_out.nml  input.nml
example/conductivity/fccPt/: Pt_out.nml  input.nml
example/density_of_states/bccFe/: input.nml
example/exchange/bccFe/: Fe_out.nml  input.nml
example/impurity/B2FeCo/: Co_dos.out  Co_orbene.out  Co_orbital_dos.out  Co_scf.nml  Co_spinene.out  Fe-imp_dos.out  Fe-imp_orbene.out  Fe-imp_orbital_dos.out  Fe-imp_scf.nml  Fe-imp_spinene.out  Fe_dos.out  Fe_orbene.out  Fe_orbital_dos.out  Fe_scf.nml  Fe_spinene.out  input.nml  linfo.out  minfo.out  outnewclu  report.out  str.out  surfclu.out  ves.out
example/impurity/implementation-write-to-out/: input_imp_u.nml
example/k_space_scf/bccFe/: Fe.nml  input.nml
example/surface/fccCu001/: Cu-S-1_out.nml  Cu-S-1_scf.nml  Cu-S-2_out.nml  Cu-S-2_scf.nml  Cu-S-3_out.nml  Cu-S-3_scf.nml  Cu-S-4_out.nml  Cu-S-4_scf.nml  Cu-S_scf.nml  ES_scf.nml  input.nml
plugins/: CMakeLists.txt  cpu_sparse_plugin.c  cuda_sparse_plugin.cu  onemkl_sparse_plugin.c  openmp_sparse_plugin.c
scripts/: fix_dos_nb_shadowing.py  fix_nb_shadowing.py  parameterize_basis.py  parameterize_basis2.py
source/: CMakeCache.txt  CMakeLists.txt  array.f90  backend_plugin_api.h  backend_plugin_loader.c  bands.f90  basis.f90  block_sparse_operator.f90  bounds.f90  calculation.f90  charge.f90  chebyshev_fast.f90  chebyshev_mkl_batch.cpp  conductivity.f90  control.f90  density_of_states.f90  element.f90  energy.f90  exchange.f90  face.F90  globals.f90  green.f90  hambuild_cuda_plugin.f90  hamiltonian.f90  hamiltonian_base_mod.f90  hamiltonian_cpu_mod.f90  haydock_fast.f90  hubbard_u.f90  lattice.f90  lists.f90  logger.f90  main.f90  math.f90  mix.f90  mpi.f90  namelist_generator.f90  os.f90  potential.f90  precision.f90  reciprocal.f90  (+18 more)
source/cuda/: Makefile  hambuild.h  hambuild_cuda.cpp  hambuild_gpu.cu  hambuild_stub.c  kpm_reference.py  recursion_gpu_mod.f90  rsk.h  rsk_cuda.cpp  rsk_cuda.h  rsk_gpu.cu  rsk_stub.c  rsrec.cpp  rsrec.h  rsrec_cpu.cpp  rsrec_cpu_fast.cpp  rsrec_cuda.cpp  rsrec_cuda.h  rsrec_gpu.cu  rsrec_stub.c  rsrec_validate.py
source/include_codes/abspinlib/: CMakeLists.txt  abSpinlib.f90  constants.f90  constrain.f90  depondt.f90  mndimer.f90  mtprng.f90  parameters.f90  randomnumbers.f90  stdtypes.f90  testbench.f90
source/include_codes/array/: funique.f90  pop.f90  push.f90  qsort.f90  qsortloc.f90  swap.f90  unique.f90
source/include_codes/namelist_generator/: add_matrix_*_variable.f90  add_tensor3_*_variable.f90
source/include_codes/namelists/: bounds.f90  calculation.f90  charge.f90  conductivity.f90  constraints.f90  control.f90  dos.f90  element.f90  energy.f90  hamiltonian.f90  kpath.f90  lattice.f90  mix.f90  potential.f90  reciprocal.f90  self.f90  spin_dynamics.f90  symbolic_atom.f90
source/include_codes/safe_alloc/: allocate_mold.f90  allocate_part1.f90  allocate_part2_1d.f90  allocate_part2_2d.f90  allocate_part2_3d.f90  allocate_part2_4d.f90  allocate_part3.f90  deallocate.f90  move_alloc.f90  report_allocate.f90  safe_alloc_allocate_0d.f90
source/include_codes/strux_lib/: CMakeLists.txt  strux_angular.f90  strux_api.f90  strux_bessel.f90  strux_errors.f90  strux_geometry.f90  strux_linalg.f90  strux_lmto47_mode.f90  strux_pair_expansion.f90  strux_solver_assembly.f90  strux_structb_compare.f90  strux_support.f90  strux_tb.f90  strux_utils.f90
tests/: generate_references.py  run_binary.sh  run_regression_tests.sh  run_test.py
tests/example_postproc/: README.md  cases.json  cases_manifest.csv  generate_reference_data.sh
tests/example_scf/: README.md  cases.json  cases_manifest.csv  compare_reference_data.py  generate_reference_data.sh  run_example_scf.sh  run_example_scf_with_ref.sh
tests/postproc/: README.md  cases.json
tests/regression/: run_single_test.sh  test_comparison.py  test_regression.py
tests/regression/bccFe_block/: Fe.nml.ref  input.nml
tests/regression/bccFe_chebyshev/: Fe.nml  Fe.nml.ref  input.nml  oneliner.sh
tests/regression/bccFe_lanczos/: Fe.nml.ref  input.nml  oneliner.sh
tests/scf/: README.md  cases.json
(+363 files in other folders)
